apps/appiecal-web-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appiecal-web-web
  namespace: default
  annotations:
    secrets.phase.dev/redeploy: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appiecal-web-web
  template:
    metadata:
      labels:
        app: appiecal-web-web
    spec:
      containers:
        - name: appiecal-web-web
          image: ghcr.io/ijskoud/appiecal-web-web@sha256:243ef8a12c86e4b7f9fb92f8f2fff40a7e22e32cd98f4219ce4769c5a5e2f5fc
          ports:
            - containerPort: 3000
