apps/appiecal-web-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appiecal-web-web
  namespace: default
spec:
  selector:
    app: appiecal-web-web
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
